# LangChain

./: pyproject.toml  requirements.txt
LangChain/0-Data_Ingestion/: DataIngestion.ipynb  PdfData.ipynb
LangChain/1-DataTransformation/: HandlingPDFChallenges.ipynb  HandlingWordDoc.ipynb  HtmlTextSplitter.ipynb  JsonParser.ipynb  RecursiveJsonSplitter.ipynb  databaseparsing.ipynb  text-splitter.ipynb
LangChain/1-DataTransformation/data/databases/: company.db
LangChain/2-VectorEmbeddingAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
LangChain/3-VectorStore/: 1-chromadb.ipynb  2-fiass.ipynb
LangChain/3-VectorStore/chroma_db/: chroma.sqlite3
LangChain/3-VectorStore/faiss_index/: index.faiss  index.pkl
LangChain/3-VectorStoreAndVectoreStoreDataBases/: 1-chromadb.ipynb  3-InMemoryVectorStore.ipynb  Datastaxdb.ipynb  PineConeVectorDb.ipynb
LangChain/4-AdvancedChunking/: 1-semanticchunking.ipynb
LangChain/5-HybridSearchStrategies/: 1-CombineDenseAndSparse.ipynb  2-Reranker.ipynb  3-MMR(MaximumMarginalRetriever).ipynb
LangChain/6-QueryEnhancement/: 1-queryexpansion.ipynb  2-querydecomposition.ipynb
