[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "azure-ai-inference>=1.0.0b9",
    "bs4>=0.0.2",
    "chromadb>=1.5.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jq>=1.11.0",
    "langchain>=1.2.10",
    "langchain-azure-ai>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.3",
    "unstructured[docx]>=0.21.5",
    "wikipedia>=1.4.0",
]
